[gd_scene load_steps=14 format=3 uid="uid://c6xmhbbm5cx4n"]

[ext_resource type="PackedScene" uid="uid://cvgijvugy7wxe" path="res://assets/button_scene.tscn" id="1_xqq6a"]
[ext_resource type="Theme" uid="uid://brkyelj36ne10" path="res://Scripts/maintheme.tres" id="1_ydy77"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="2_xbi84"]
[ext_resource type="Texture2D" uid="uid://bd3eeolp5h22g" path="res://assets/Images/rectangleborderyellow.svg" id="3_23lh6"]
[ext_resource type="Texture2D" uid="uid://bgmppv2cfhcf6" path="res://assets/Images/luckydecklogo.png" id="3_m1nn1"]
[ext_resource type="Script" path="res://Scripts/PlayerFavoriteCardMenu.gd" id="6_3crqy"]
[ext_resource type="Texture2D" uid="uid://dd6xoy4hk75l0" path="res://assets/Images/CardFronts/cards1-2.png" id="6_eux68"]
[ext_resource type="ButtonGroup" uid="uid://beososyiu12nc" path="res://Scripts/suitSelection.tres" id="7_dmpvh"]
[ext_resource type="Texture2D" uid="uid://skqe0wti1hj4" path="res://assets/Images/CardFronts/cards1-1.png" id="7_eh48p"]
[ext_resource type="Texture2D" uid="uid://dyqua4h061bdt" path="res://assets/Images/CardFronts/cards2-2.png" id="10_lddih"]
[ext_resource type="Texture2D" uid="uid://djp50bkf568lt" path="res://assets/Images/CardFronts/cards3-2.png" id="11_cekfv"]
[ext_resource type="Texture2D" uid="uid://bblli8752c24p" path="res://assets/Images/CardFronts/cards4-2.png" id="12_8imka"]
[ext_resource type="Texture2D" uid="uid://dsyec6g04gdst" path="res://assets/Images/Buttons/buttonhighlights.svg" id="13_f0wp0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_ydy77")
script = ExtResource("2_xbi84")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.411765, 0.0352941, 1)

[node name="TextureRect" type="TextureRect" parent="background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_23lh6")

[node name="mainMenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="ButtonLogo" parent="mainMenuButtons" instance=ExtResource("1_xqq6a")]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="mainMenuButtons/ButtonLogo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -253.5
offset_top = -279.0
offset_right = 253.5
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_m1nn1")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="mainMenuButtons"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="Play" parent="mainMenuButtons/VBoxContainer" instance=ExtResource("1_xqq6a")]
layout_mode = 2

[node name="Label" type="Label" parent="mainMenuButtons/VBoxContainer/Play"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -37.5
offset_right = 53.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ydy77")
theme_override_font_sizes/font_size = 80
text = "Play"

[node name="Rules" parent="mainMenuButtons/VBoxContainer" instance=ExtResource("1_xqq6a")]
layout_mode = 2

[node name="Label2" type="Label" parent="mainMenuButtons/VBoxContainer/Rules"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.5
offset_top = -49.5
offset_right = 71.5
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ydy77")
theme_override_font_sizes/font_size = 80
text = "Rules"

[node name="Settings" parent="mainMenuButtons/VBoxContainer" instance=ExtResource("1_xqq6a")]
layout_mode = 2

[node name="Label2" type="Label" parent="mainMenuButtons/VBoxContainer/Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.5
offset_top = -49.5
offset_right = 71.5
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ydy77")
theme_override_font_sizes/font_size = 80
text = "Settings"

[node name="Credits" parent="mainMenuButtons/VBoxContainer" instance=ExtResource("1_xqq6a")]
layout_mode = 2

[node name="Label2" type="Label" parent="mainMenuButtons/VBoxContainer/Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.5
offset_top = -49.5
offset_right = 71.5
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ydy77")
theme_override_font_sizes/font_size = 80
text = "Credits"

[node name="PlayerFavoriteCardMenu" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_3crqy")
suitSelect = ExtResource("7_dmpvh")

[node name="background" type="ColorRect" parent="PlayerFavoriteCardMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.411765, 0.0352941, 1)

[node name="TextureRect" type="TextureRect" parent="PlayerFavoriteCardMenu/background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_23lh6")

[node name="mainLayoutCredits" type="VBoxContainer" parent="PlayerFavoriteCardMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80

[node name="Heading Seperator" type="VBoxContainer" parent="PlayerFavoriteCardMenu/mainLayoutCredits"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="ButtonLogo" parent="PlayerFavoriteCardMenu/mainLayoutCredits/Heading Seperator" instance=ExtResource("1_xqq6a")]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="PlayerFavoriteCardMenu/mainLayoutCredits/Heading Seperator/ButtonLogo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -253.5
offset_top = -279.0
offset_right = 253.5
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_m1nn1")
stretch_mode = 5

[node name="PlayerHeading" parent="PlayerFavoriteCardMenu/mainLayoutCredits/Heading Seperator" instance=ExtResource("1_xqq6a")]
layout_mode = 2

[node name="Label" type="Label" parent="PlayerFavoriteCardMenu/mainLayoutCredits/Heading Seperator/PlayerHeading"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -37.5
offset_right = 53.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ydy77")
theme_override_font_sizes/font_size = 60
text = "Select Favorite Cards"

[node name="SelectionBox" type="VBoxContainer" parent="PlayerFavoriteCardMenu/mainLayoutCredits"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="PlayerHeading" parent="PlayerFavoriteCardMenu/mainLayoutCredits/SelectionBox" instance=ExtResource("1_xqq6a")]
layout_mode = 2
text = "Player 1"

[node name="cardSelection" parent="PlayerFavoriteCardMenu/mainLayoutCredits/SelectionBox" instance=ExtResource("1_xqq6a")]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
mouse_filter = 1

[node name="TextureRect" parent="PlayerFavoriteCardMenu/mainLayoutCredits/SelectionBox/cardSelection" index="0"]
offset_top = -3.0
offset_bottom = 3.0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerFavoriteCardMenu/mainLayoutCredits/SelectionBox/cardSelection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Suit Selection" type="MarginContainer" parent="PlayerFavoriteCardMenu/mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerFavoriteCardMenu/mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/Suit Selection"]
layout_mode = 2
theme_override_constants/separation = 45
alignment = 1

[node name="Diamond" type="TextureButton" parent="PlayerFavoriteCardMenu/mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/Suit Selection/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = ExtResource("7_dmpvh")
texture_normal = ExtResource("6_eux68")
texture_pressed = ExtResource("7_eh48p")

[node name="Heart" type="TextureButton" parent="PlayerFavoriteCardMenu/mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/Suit Selection/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("7_dmpvh")
texture_normal = ExtResource("10_lddih")
texture_pressed = ExtResource("7_eh48p")

[node name="Spade" type="TextureButton" parent="PlayerFavoriteCardMenu/mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/Suit Selection/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("7_dmpvh")
texture_normal = ExtResource("11_cekfv")
texture_pressed = ExtResource("7_eh48p")

[node name="Club" type="TextureButton" parent="PlayerFavoriteCardMenu/mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/Suit Selection/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("7_dmpvh")
texture_normal = ExtResource("12_8imka")
texture_pressed = ExtResource("7_eh48p")

[node name="GridContainer2" type="GridContainer" parent="PlayerFavoriteCardMenu/mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer"]
layout_mode = 2
columns = 7

[node name="Start Game" type="Button" parent="PlayerFavoriteCardMenu"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -78.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_ydy77")
theme_override_font_sizes/font_size = 80
text = "Start Game"
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="PlayerFavoriteCardMenu/Start Game"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.001
anchor_top = 0.01
anchor_right = 0.999
anchor_bottom = 0.99
offset_left = 0.28
offset_top = 2.0
offset_right = -0.280029
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_f0wp0")
expand_mode = 1

[connection signal="pressed" from="mainMenuButtons/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="mainMenuButtons/VBoxContainer/Rules" to="." method="_on_rules_pressed"]
[connection signal="pressed" from="mainMenuButtons/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="mainMenuButtons/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="PlayerFavoriteCardMenu/Start Game" to="PlayerFavoriteCardMenu" method="_on_start_game_pressed"]

[editable path="PlayerFavoriteCardMenu/mainLayoutCredits/SelectionBox/cardSelection"]
